Simplify test