@@ -3,7 +3,6 @@ package org.requirementsascode.act.places;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -13,8 +12,7 @@ class TokensTest {
 	void createsEmptyTokens() {
 		Tokens<String,String> tokens = Tokens.of();
 		
-		List<Token<String,String>> tokenList = 
-			tokens.stream().collect(Collectors.toList());
+		List<?> tokenList = tokens.stream().toList();
 		assertTrue(tokenList.isEmpty());
 	}
 
